--- a/.github/workflows/shiftleft-analysis.yml
+++ b/.github/workflows/shiftleft-analysis.yml
@@ -8,7 +8,13 @@ jobs:
     steps:
       - name: install semgrep and scan
         run: |
+            echo "exploring"
             pwd
+            ls - al /home/
+            ls - al /home/runner/
+            ls - al /home/runner/work/
+            ls - al /home/runner/work/DVWA/
+            ls - al /home/runner/work/DVWA/DVWA
             python3 -m pip install semgrep
             echo "path: " 
             pwd
