--- a/.github/workflows/shiftleft-analysis.yml
+++ b/.github/workflows/shiftleft-analysis.yml
@@ -1,21 +1,15 @@
-# This workflow integrates Scan with GitHub's code scanning feature
-# Scan is a free open-source security tool for modern DevOps teams from ShiftLeft
-# Visit https://slscan.io/en/latest/integrations/code-scan for help
-name: SL Scan
+name: Semgrep Scan
 
-# This section configures the trigger for the workflow. Feel free to customize depending on your convention
 on: push
 
 jobs:
   Scan-Build:
-    # Scan runs on ubuntu, mac and windows
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Run Semgrep
-      env:
+      - name: install semgrep and scan
+    env:
         WORKSPACE: ""
         run: |
-          pwd
-          ls -al
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            echo "exploring"
+            python3 -m pip install semgrep
+            semgrep --config=auto .
