--- a/.github/workflows/shiftleft-analysis.yml
+++ b/.github/workflows/shiftleft-analysis.yml
@@ -33,7 +33,7 @@ jobs:
             then
                echo "importing scan to existing CICD engagement"
                curl -X 'GET' 'http://10.120.0.167:8080/api/v2/tests/?prefetch=' -H 'accept: application/json' -H 'Authorization: Token 474cea4a2382f0e2b9667186563e9927715c4d3d' > /tmp/dj_tests.json
-               eng_id = $(cat /tmp/dj_engagements.json| jq '.results[] | select(.name=="'"$echo"CICD-"${{ github.event.repository.name }}"'") | .id')
+               cat /tmp/dj_engagements.json| jq '.results[] | select(.name=="'"$echo"CICD-"${{ github.event.repository.name }}"'") | .id')
                #fetch tests and see if test exists or not 
                if [ "$(curl -X 'GET' 'http://10.120.0.167:8080/api/v2/tests/?prefetch=' -H 'accept: application/json' -H 'Authorization: Token 474cea4a2382f0e2b9667186563e9927715c4d3d' | jq '.results[] | select(.engagement==28) | .id')" ]
                then 
